[package]
name = "store"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
url = "2.5.2"
uuid = "1.8.0"
reed-solomon-erasure = "6.0.0"
