[package]
name = "protos"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[[bin]]
name = "gproto"
path = "src/main.rs"

[dependencies]
#async-backtrace = { workspace = true, optional = true }
common.workspace = true
flatbuffers = { workspace = true }
prost = { workspace = true }
protobuf = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true, features = ["transport"] }
tower = { workspace = true }
prost-build = { workspace = true }
tonic-build = { workspace = true }
