[package]
name = "rustfs-ahm"
version = "0.1.0"
edition = "2021"
authors = ["RustFS Team"]
license = "Apache-2.0"
description = "RustFS AHM (Automatic Health Management) Scanner"

[dependencies]
rustfs-ecstore = { workspace = true }
rustfs-common = { workspace = true }
rustfs-filemeta = { workspace = true }
rustfs-madmin = { workspace = true }
rustfs-utils = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
bytes = { workspace = true }
time = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }
anyhow = { workspace = true }
async-trait = "0.1"
futures = "0.3"
url = "2.4"
rustfs-lock = { workspace = true }

[dev-dependencies]
rmp-serde = { workspace = true }
tokio-test = "0.4"
serde_json = "1.0"
