# Copyright 2024 RustFS Team
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "rustfs-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "rustfs_audit"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
async-trait = "0.1"
dashmap = "6.0"
arc-swap = "1.0"
once_cell = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# RustFS dependencies
rustfs-targets = { path = "../targets" }
rustfs-config = { path = "../config" }
rustfs-ecstore = { path = "../ecstore" }
rustfs-obs = { path = "../obs" }

[dev-dependencies]
tempfile = "3.0"

[[example]]
name = "audit_usage"
path = "examples/audit_usage.rs"