[package]
name = "rustfs-concurrency"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
description = "Shared concurrency contract types for RustFS - workload admission, queue snapshots, worker pools, and policy types"
keywords = ["rustfs", "concurrency", "admission", "backpressure", "workers"]
categories = ["concurrency", "filesystem"]

[dependencies]
# Internal crates
rustfs-io-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }

# Async runtime
tokio = { workspace = true, features = ["sync", "fs", "rt-multi-thread"] }

# Logging
tracing = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["yaml", "json"] }
serde_json = { workspace = true, features = ["raw_value"] }
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread", "fs"] }
