[package]
name = "rustfs-config"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
const-str = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }


[lints]
workspace = true

[features]
default = []
constants = ["dep:const-str"]
notify = []
observability = []

